clusters/home-cluster/apps/unifi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi
  namespace: network
  labels:
    app: unifi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unifi
  template:
    metadata:
      labels:
        app: unifi
    spec:
      # Use custom DNS settings for this pod
      dnsPolicy: None
      dnsConfig:
        nameservers:
        - 8.8.8.8
        - 1.1.1.1
        searches:
        - localdomain
      containers:
      - name: unifi
        image: jacobalberty/unifi:latest
        ports:
        - containerPort: 8443
        - containerPort: 3478
        - containerPort: 10001
